mobile-navbar.js  correct visibled css

--- a/project/src/components/ui/mobile-navbar/css/mobile-navbar.css
+++ b/project/src/components/ui/mobile-navbar/css/mobile-navbar.css
@@ -1,6 +1,6 @@
 
 .mobile-navbar {
-  display: flex;
+  display: none;
   justify-content: space-around;
   background-color: #fff;
   padding: 10px 0;
